force-app/main/default/objects/Store_Inspection_Manage__c/Store_Inspection_Manage__c.object-meta.xml
<CustomObject>
    <label>Store Inspection Manage</label>
    <nameField>
        <displayFormat>SIMN-{00000000}</displayFormat>
        <label>Store Inspection Manage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Inspection Manage</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>