force-app/main/default/objects/Store_Inspection_Manage__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <formula>IF(ISPICKVAL( Task_Type__c , &apos;巡店&apos;) , TEXT( Store_Inspection_Number_Summary__c ),
IF(ISPICKVAL( Task_Type__c , &apos;客户拜访&apos;), TEXT( Customer_Visit_Summary__c),
IF(ISPICKVAL( Task_Type__c , &apos;渠道拓展&apos;), TEXT( Customer_Extend_Summary__c),
IF(ISPICKVAL( Task_Type__c , &apos;销售额&apos;), TEXT(CurrencyIsoCode) + &apos; &apos; + TEXT( ROUND(Daily_Sales_Summary__c,2) ), &apos;&apos;)
) ) )</formula>
    <label>Complete</label>
    <type>Text</type>
</CustomField>