force-app/main/default/objects/Store_Inspection_Manage__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Inspection Manage</relationshipLabel>
    <relationshipName>Store_Inspection_Manage</relationshipName>
    <type>Lookup</type>
</CustomField>