force-app/main/default/objects/Store_Inspection_Manage__c/fields/Customer_Visit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_Summary__c</fullName>
    <label>*Customer Visit Summary</label>
    <summaryFilterItems>
        <field>Store_Inspection_Manage_Report__c.Report_Type__c</field>
        <operation>equals</operation>
        <value>客户拜访</value>
    </summaryFilterItems>
    <summaryForeignKey>Store_Inspection_Manage_Report__c.Store_Inspection_Manage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>