force-app/main/default/objects/Store_Inspection_Manage__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>用户id + &apos;-&apos; + 年 + &apos;-&apos; + 月 + &apos;-&apos; + 任务类型</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>