force-app/main/default/objects/Store_Inspection_Manage__c/fields/Rate_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Completion__c</fullName>
    <formula>IF(ISPICKVAL( Task_Type__c , &apos;巡店&apos;), Store_Inspection_Number_Summary__c / Number__c ,
IF(ISPICKVAL( Task_Type__c , &apos;客户拜访&apos;), Customer_Visit_Summary__c/ Number__c ,
IF(ISPICKVAL( Task_Type__c , &apos;渠道拓展&apos;), Customer_Extend_Summary__c/ Number__c ,
IF(ISPICKVAL( Task_Type__c , &apos;销售额&apos;), Daily_Sales_Summary__c / Sales__c , 0))))</formula>
    <label>Rate of Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>