force-app/main/default/objects/Store_Inspection_Manage__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <formula>IF( OR(ISPICKVAL( Task_Type__c , &apos;巡店&apos;), ISPICKVAL( Task_Type__c , &apos;客户拜访&apos;),ISPICKVAL( Task_Type__c , &apos;渠道拓展&apos;),ISPICKVAL( Task_Type__c , &apos;重点产品&apos;)), TEXT( Number__c ),
IF( OR(ISPICKVAL( Task_Type__c , &apos;人均效率&apos;),ISPICKVAL( Task_Type__c , &apos;店均效率&apos;)) , TEXT((Percent__c * 100)) + &apos;%&apos; ,
IF(ISPICKVAL( Task_Type__c , &apos;销售额&apos;), TEXT(CurrencyIsoCode) + &apos; &apos; + TEXT( Sales__c ), &apos;&apos;)
) )</formula>
    <label>Show</label>
    <type>Text</type>
</CustomField>