force-app/main/default/objects/Store_Inspection_Manage__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Store Inspection Manage</relationshipLabel>
    <relationshipName>Store_Inspection_Manage</relationshipName>
    <type>Lookup</type>
</CustomField>