force-app/main/default/objects/Store_Inspection_Manage__c/fields/Store_Inspection_Number_Summary__c.field-meta.xml
<CustomField>
    <fullName>Store_Inspection_Number_Summary__c</fullName>
    <label>*Store Inspection Number Summary</label>
    <summaryFilterItems>
        <field>Store_Inspection_Manage_Report__c.Report_Type__c</field>
        <operation>notEqual</operation>
        <value>客户拜访, 客户拓展</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Store_Inspection_Manage_Report__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Store_Inspection_Manage_Report__c.Store_Inspection_Manage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>