force-app/main/default/objects/Store_Inspection_Manage__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>巡店</fullName>
                <default>true</default>
                <label>巡店</label>
            </value>
            <value>
                <fullName>客户拜访</fullName>
            </value>
            <value>
                <fullName>渠道拓展</fullName>
            </value>
            <value>
                <fullName>销售额</fullName>
            </value>
            <value>
                <fullName>重点产品</fullName>
            </value>
            <value>
                <fullName>人均效率</fullName>
                <isActive>false</isActive>
                <label>人均效率</label>
            </value>
            <value>
                <fullName>店均效率</fullName>
                <isActive>false</isActive>
                <label>店均效率</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>