force-app/main/default/objects/Store_Inspection_Manage__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Store_Inspection_Manage</relationshipName>
    <type>Lookup</type>
</CustomField>