force-app/main/default/objects/Store_Inspection_Manage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Task_Type__c</columns>
    <columns>User__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Store__c</columns>
    <columns>Show__c</columns>
    <columns>Complete__c</columns>
    <columns>Rate_of_Completion__c</columns>
    <columns>Daily_Sales_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>